pijama_driver/tests/type_check/pass/functions/anon_fn_from_int_to_int_with_type.pj
fn(x: Int): Int do x end
