pijama_driver/tests/type_check/fail/functions/wrong_type_after_call.pj
fn foo(x: Int): Int do
    x + 1
end
foo(10) && true
